TAG:lib_java_core-tr4289-BP
DATE: 04/10/2005
STAFF: dow
CHANGES: adding values to DTOConstants for MPR release.

TAG:lib_java_core-tr6046-BP
DATE: 04/07/2005
STAFF: mbw
CHANGES: adding bucketizer, graphs, sva packages for the entrezgene load

TAG: lib_java_core-3-1-1-2
DATE: 02/18/2005
STAFF: dbm
CHANGES: Merged tr3007 branch for MGC release

TAG: lib_java_core-3-1-1-1
DATE: 01/26/2005
STAFF: pf
CHANGES: merge maint6300 to trunk

TAG: lib_java_core-maint6300-BP
DATE: 01/20/2005
STAFF: pf

TAG: lib_java_core-tr3007-1
DATE: 01/25/2005
STAFF: dbm

DATE: 01/24/2004
STAFF: mbw
CHANGES: moved DataOutputFile and support classes to tr6427 branch

DATE: 01/05/2004
STAFF: dbm
CHANGES: added DataOutputFile and support classes

DATE: 01/04/2004
STAFF: mbw
CHANGES: bug fix on RowDataIterator from dbutils package

TAG: lib_java_core-tr3007-BP
DATE: 01/04/2005
STAFF: mbw

TAG:lib_java_core-tr5939-BP
DATE: 12/20/2004
STAFF: mbw

TAG:lib_java_core-tr6427-BP
DATE: 12/20/2004
STAFF: mbw

TAG:lib_java_core-3-1-0-1
DATE: 12/17/2004
STAFF: mbw
no change

TAG:lib_java_core-3-1-1
DATE: 12/16/2004
STAFF: mbw
CHANGES: merged assembly branch onto trunk

TAG:lib_java_core-assembly-2
DATE: 12/02/2004
STAFF: mbw
CHANGES: now supports double precision instead of single

TAG:lib_java_core-assembly-1
DATE: 12/02/2004
STAFF: mbw
CHANGES: 1) bug fix in Configuration class: now throws exception when it cannot resolve a configuration parameter
         2) continued initial development of TestManager

TAG:lib_java_core-assembly-BP
DATE: 12/02/2004
STAFF: mbw

TAG:lib_java_core-1-0-31
DATE: 11/05/2004
STAFF: mbw
CHANGES: tagged to include changes Josh made to the DTOConstants class

TAG:lib_java_core-1-0-30
DATE: 11/04/2004
STAFF: mbw
CHANGES: see changes since last tag

DATE: 10/26/2004
STAFF: mbw
CHANGES: added new functionality to the unit testing class TestManager

TAG:lib_java_core-1-0-29
DATE: 10/22/2004
STAFF: mbw