@@ -1,3 +1,8 @@
+TAG:lib_java_core-3-2-0-0
+DATE: 04/12/2005
+STAFF: dow
+CHANGES: Merged tr4289 branch for MPR release
+
 TAG:lib_java_core-tr4289-BP
 DATE: 04/10/2005
 STAFF: dow
